--- a/map_Training/index.html
+++ b/map_Training/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>.map</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <script src="app.js"></script>
+    <div id="sum-of-p">
+        <p></p>
+        <p></p>
+        <p></p>
+    </div>
+    <div id="pair">
+        
+    </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
